fixed horizontal overflow due to AOS library

--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,7 @@
 
 .customers {
     margin-top: 60px;
+    overflow-x: hidden;
 }
 
 .customers__logos--one,
