--- a/css/services.css
+++ b/css/services.css
@@ -1,5 +1,6 @@
 .services {
     margin: 50px auto 10px;
+    overflow-x: hidden;
 }
 
 .services__leadText {
